test/should_pass/inh_attrib_model_002.gm
// A multiple edge attribute declaration should be
// accepted when it happens in a common super class

model inh_attrib_model_002;

edge class Type1 {
	a : int;
}

edge class Type2 extends Type1 {
}

edge class Type3 extends Type1 {
}

edge class Type4 extends Type2, Type3 {
}


